--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.4
+  date_picker_timeline: ^1.2.3
+  firebase_core: ^2.13.0
+  cloud_firestore: ^4.7.1
 
 
   # The following adds the Cupertino Icons font to your application.
