--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   date_picker_timeline: ^1.2.3
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
+  flutter_slidable: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
