--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^2.13.0
   cloud_firestore: ^4.7.1
   flutter_slidable: ^3.0.0
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
